--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
                 <i class="fas fa-home fa-2x"></i>
               </div>
               <div class="p-2 align-self-center">
-                <% title %>
+                Home
               </div>
             </a>
           </li>
