--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,106 +1,6 @@
 <%- include("header.ejs") %>
 <div class="d-flex flex-row justify-content-center">
-  <div class="w-10 p-0">
-
-    <div class="d-flex flex-column">
-      <div class="p-0 logo icon-list ">
-        <i class="fab fa-twitter fa-2x"></i>
-      </div>
-      <div class="p-0">
-        <ul class="nav flex-column">
-          <li class="nav-item ">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-home fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Home
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-hashtag fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Explore
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-bell fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Notifications
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-envelope fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Messages
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-bookmark fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Bookmarks
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-list-alt fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Lists
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <i class="fas fa-circle fa-2x"></i>
-              </div>
-              <div class="p-2 align-self-center">
-                Profile
-              </div>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link d-flex align-items-baseline" href="#">
-              <div class="p-2 icon-list">
-                <span class="fa-stack icon-list" style="vertical-align: top;">
-                  <i class="far fa-circle fa-stack-2x"></i>
-                  <i class="fas fa-ellipsis-h fa-stack-1x"></i>
-                </span>
-              </div>
-              <div class="p-2 align-self-center">
-                More
-              </div>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="tweet-btn  flex-fill">
-        <a href="#">Tweet</a>
-      </div>
-    </div>
-
-
-
-  </div>
+  <%- include("nav.ejs") %>
   <div class="w-50 p-0 main">
     <div class="d-flex flex-row twitter-tweet">
       <h3>Home</h3>
@@ -129,53 +29,6 @@
 
     </div>
   </div>
-  <div class="w-10 p-0 side-bar">
-    <div id="wrap">
-      <form class="side-bar-items search" action="/search" role="search">
-        <i class="fas fa-search"></i>
-        <input id="search-query" class="search-input" type="text" placeholder="Search NotTwitter" />
-      </form>
-    </div>
-    <div class="side-bar-items">
-      <div class="side-bar-title">
-        Trends for you
-      </div>
-      <div class="side-bar-content">
-        Trending in United States
-      </div>
-      <div class="side-bar-content">
-        Trending in United States
-      </div>
-      <div class="side-bar-content">
-        Trending in United States
-      </div>
-
-    </div>
-    <div class="side-bar-items">
-      <div class="side-bar-title">
-        Who to follow
-      </div>
-      <div class="d-flex flex-row side-bar-content">
-        <div class="side-bar-icon">
-          <img src="https://via.placeholder.com/49" class="rounded-circle" alt="">
-        </div>
-        <div class="side-bar-name">
-          <div class="">
-            John Doe
-          </div>
-          <div class="side-bar-tag">
-            @johndoe
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="footer">
-      <a href="#">Terms</a>
-      <a href="#">Privacy Policy</a>
-      <a href="#">Cookies</a>
-      <a href="#">c 2020 NotTwitter, Inc.</a>
-    </div>
-  </div>
+  <%- include("sidebar.ejs") %>
 </div>
 <%- include("footer.ejs") %>
