--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,10 +1,3 @@
-.profile-div {
-  background: #fff none repeat scroll 0 0;
-  border: 1px solid #e1e8ed;
-  border-radius: 6px;
-  height: 200px;
-  max-width: 340px;
-}
 
 .profile-bg {
   background-image: url("https://pbs.twimg.com/profile_banners/777297854473711618/1474163877/600x200");
@@ -19,6 +12,7 @@
 .profile-block {
   display: block !important;
   z-index: 0;
+
 }
 
 .profile-button {
@@ -27,19 +21,14 @@
   width: 100%;
 }
 
-.profile-avatarLink {
-  background-color: #fff;
-  border-radius: 6px;
-  display: inline-block !important;
-  float: left;
-  margin: -30px 5px 0 8px;
-  max-width: 100%;
-  padding: 1px;
-  vertical-align: bottom;
-}
-
 .profile-container {
   position: relative;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #eee #ddd #bbb;
+  font-size: 15px;
+  font-weight:lighter;
+  line-height: 1.3125;
 }
 
 .profile-avatarImg {
@@ -53,6 +42,7 @@
 
 .profile-divUser {
   margin: 5px 0 0;
+  padding: 10px;
 }
 
 .profile-divName {
@@ -68,48 +58,36 @@
   color: #657786;
   text-decoration: none;
 }
-.profile-divStats {
-  margin-left: 11px;
-  padding: 10px 0;
+.profile-info {
+  padding: 5px 0 5px 0;
+}
+.profile-stat {
+  margin-right: 20px;
 }
 
-.profile-Arrange {
-  box-sizing: border-box;
-  display: table;
-  margin: 0;
-  min-width: 100%;
-  padding: 0;
-  table-layout: auto;
+.tweet-nav {
+
+}
+.tweet-nav-item {
+  font-weight: bold;
+  color: #657786;
+  background-color: #fff;
+  border-style: none;
+  border-radius: 0;
+}
+.tweet-nav-item:hover {
+  background-color: #E8F5FE;
+  color: #1DA1F2;
 }
 
-ul.profile-Arrange {
-  list-style: outside none none;
-  margin: 0;
-  padding: 0;
+.tweet-nav-item-active {
+  background-color: #E8F5FE;
+  color: #1DA1F2;
+  border-bottom: 2px solid #1DA1F2;
+  box-shadow:none;
 }
-
-.profile-ArrangeSizeFit {
-  display: table-cell;
-  padding: 0;
-  vertical-align: top;
-}
-
-.profile-ArrangeSizeFit a:hover {
-  text-decoration: none;
-}
-
-.profile-StatValue {
-  display: block;
-  font-size: 18px;
-  font-weight: 500;
-  transition: color 0.15s ease-in-out 0s;
-}
-
-.profile-StatLabel {
-  color: #8899a6;
-  font-size: 10px;
-  letter-spacing: 0.02em;
-  overflow: hidden;
-  text-transform: uppercase;
-  transition: color 0.15s ease-in-out 0s;
+.tweet-nav-item-active:focus {
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
