--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,32 +7,66 @@
       <h3><%= foundUser.username  %></h3>
       <p class=""><%= foundUser.tweets %></p>
     </div>
-    <form class="" action="index.html" method="post">
-      <div class="d-flex flex-row">
-        <div class="p-0 flex-fill profile-container">
-          <a class="profile-bg profile-block"></a>
-          <a title="" href="" class="">
-            <img src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_400x400.jpg" class="profile-avatarImg rounded-circle">
-          </a>
 
-          <div class="profile-divUser">
-            <div class="profile-divName">
-              <span href=""><%= foundUser.username  %></span>
-            </div>
-            <div class="profile-divTag">
-              <span>
-                @<%= foundUser.username  %>
-              </span>
-            </div>
+    <div class="d-flex flex-row">
+      <div class="p-0 flex-fill profile-container">
+        <a class="profile-bg profile-block"></a>
+        <a title="" href="" class="">
+          <img  class="profile-avatarImg rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_400x400.jpg">
+        </a>
 
+        <div class="profile-divUser ">
+          <div class="profile-divName">
+            <span href=""><%= foundUser.username  %></span>
+          </div>
+          <div class="profile-divTag">
+            <span>
+              @<%= foundUser.username  %>
+            </span>
+          </div>
+          <div class="profile-bio profile-info">
+            <span>
+              <%= foundUser.profile.bio  %>
+            </span>
+          </div>
+          <div class="d-flex flex-row profile-info">
+            <div class="profile-stat"><i class="fas fa-map-marker-alt"></i> <%= foundUser.profile.location  %></div>
+            <div class="profile-stat"><i class="fas fa-link"></i> <a href="<%= foundUser.profile.website  %>"><%= foundUser.profile.website  %></a></div>
+            <div class="profile-stat"><i class="far fa-calendar-alt"></i> Joined <%= regDate %></div>
+          </div>
+          <div class="d-flex flex-row profile-info">
+            <div class="profile-stat"><strong><%= foundUser.following  %></strong> Following</div>
+            <div class="profile-stat"><strong><%= foundUser.followers  %></strong> Follwers</div>
           </div>
         </div>
+
+        <div class="d-flex flex-row" class="tweet-nav" id="tweet-nav-container">
+          <button id="tweets" class="btn p-2 flex-fill tweet-nav-item tweet-nav-item-active">Tweets</button>
+          <button id="tweetsnreplies" class="btn p-2 flex-fill tweet-nav-item">Tweets & replies</button>
+          <button id="media" class="btn p-2 flex-fill tweet-nav-item">Media</button>
+          <button id="likes" class="btn p-2 flex-fill tweet-nav-item">Likes</button>
+        </div>
       </div>
-    </form>
-
-    <div class="">
-
     </div>
+
+    <script type="text/javascript">
+      // Get the container element
+      var btnContainer = document.getElementById("tweet-nav-container");
+
+      // Get all buttons with class="btn" inside the container
+      var btns = btnContainer.getElementsByClassName("btn");
+
+      // Loop through the buttons and add the active class to the current/clicked button
+      for (var i = 0; i < btns.length; i++) {
+        btns[i].addEventListener("click", function() {
+          var current = document.getElementsByClassName("tweet-nav-item-active");
+          current[0].className = current[0].className.replace(" tweet-nav-item-active", "");
+          this.className += " tweet-nav-item-active";
+        });
+      }
+
+    </script>
+
   </div>
   <%- include("sidebar.ejs") %>
 </div>
