--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,6 +6,7 @@
   <title>NotTwitter</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/profile.css">
+  <link rel="stylesheet" href="css/tweet.css">
   <link rel="stylesheet" href="css/styles.css">
 
   <script src="/js/lib/jquery.min.js"></script>
