--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -48,14 +48,15 @@
         </div>
       </div>
     </div>
-
+    <div class="d-flex tweet-box">
+      <div class="p-2"><img  class="rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_bigger.jpg" height="49" width="49"></div>
+      <div class="p-2 flex-fill">Flex item</div>
+    </div>
     <script type="text/javascript">
       // Get the container element
       var btnContainer = document.getElementById("tweet-nav-container");
-
       // Get all buttons with class="btn" inside the container
       var btns = btnContainer.getElementsByClassName("btn");
-
       // Loop through the buttons and add the active class to the current/clicked button
       for (var i = 0; i < btns.length; i++) {
         btns[i].addEventListener("click", function() {
@@ -64,7 +65,6 @@
           this.className += " tweet-nav-item-active";
         });
       }
-
     </script>
 
   </div>
