--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -5,7 +5,7 @@
       <i class="fab fa-twitter fa-2x"></i>
     </div>
     <div class="p-0">
-      <ul class="nav flex-column">
+      <ul class="nav flex-column" id="nav-container">
         <li class="nav-item ">
           <a class="nav-link d-flex align-items-baseline" href="#">
             <div class="p-2 icon-list">
@@ -16,8 +16,8 @@
             </div>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+        <li class="nav-item nav-btn-active">
+          <a class="nav-link d-flex align-items-baseline " href="#">
             <div class="p-2 icon-list">
               <i class="fas fa-hashtag fa-2x"></i>
             </div>
@@ -96,3 +96,17 @@
     </div>
   </div>
 </div>
+<script type="text/javascript">
+  // Get the container element
+  var btnContainer = document.getElementById("nav-container");
+  // Get all buttons with class="btn" inside the container
+  var btns = btnContainer.getElementsByClassName("nav-item");
+  // Loop through the buttons and add the active class to the current/clicked button
+  for (var i = 0; i < btns.length; i++) {
+    btns[i].addEventListener("click", function() {
+      var current = document.getElementsByClassName("nav-btn-active");
+      current[0].className = current[0].className.replace(" nav-btn-active", "");
+      this.className += " nav-btn-active";
+    });
+  }
+</script>
