--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -6,8 +6,8 @@
     </div>
     <div class="p-0">
       <ul class="nav flex-column" id="nav-container">
-        <li class="nav-item ">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+        <li class="nav-item nav-btn-active">
+          <a class="nav-link d-flex align-items-baseline" href="/home">
             <div class="p-2 icon-list">
               <i class="fas fa-home fa-2x"></i>
             </div>
@@ -16,8 +16,8 @@
             </div>
           </a>
         </li>
-        <li class="nav-item nav-btn-active">
-          <a class="nav-link d-flex align-items-baseline " href="#">
+        <li class="nav-item">
+          <a class="nav-link d-flex align-items-baseline " href="/explore">
             <div class="p-2 icon-list">
               <i class="fas fa-hashtag fa-2x"></i>
             </div>
@@ -27,7 +27,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/notifications">
             <div class="p-2 icon-list">
               <i class="fas fa-bell fa-2x"></i>
             </div>
@@ -37,7 +37,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/messages">
             <div class="p-2 icon-list">
               <i class="fas fa-envelope fa-2x"></i>
             </div>
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/bookmark">
             <div class="p-2 icon-list">
               <i class="fas fa-bookmark fa-2x"></i>
             </div>
@@ -57,7 +57,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/list">
             <div class="p-2 icon-list">
               <i class="fas fa-list-alt fa-2x"></i>
             </div>
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/profile">
             <div class="p-2 icon-list">
               <i class="fas fa-circle fa-2x"></i>
             </div>
@@ -77,7 +77,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="#">
+          <a class="nav-link d-flex align-items-baseline" href="/logout">
             <div class="p-2 icon-list">
               <span class="fa-stack icon-list" style="vertical-align: top;">
                 <i class="far fa-circle fa-stack-2x"></i>
@@ -85,7 +85,7 @@
               </span>
             </div>
             <div class="p-2 align-self-center">
-              More
+              Logout
             </div>
           </a>
         </li>
