Added user data to home view

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,9 @@
     <form class="" action="/tweet" method="post">
       <div class="d-flex flex-row twitter-tweet">
         <div class="p-2">
+          <a href="/<%= foundUser.username %>" >
           <img  class="rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_bigger.jpg" height="49" width="49">
+          </a>
         </div>
         <div class="p-2 flex-fill">
           <div class="tweetBox">
