--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
 
         <div class="profile-divUser ">
           <div class="profile-divName">
-            <span href=""><%= foundUser.username  %></span>
+            <span href=""><%= foundUser.profile.name  %></span>
           </div>
           <div class="profile-divTag">
             <span>
