--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -67,7 +67,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-flex align-items-baseline" href="/profile">
+          <a class="nav-link d-flex align-items-baseline" href="/<%= foundUser.username %>">
             <div class="p-2 icon-list">
               <i class="fas fa-circle fa-2x"></i>
             </div>
