--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -69,7 +69,7 @@
         <li class="nav-item">
           <a class="nav-link d-flex align-items-baseline" href="/<%= foundUser.username %>">
             <div class="p-2 icon-list">
-              <i class="fas fa-circle fa-2x"></i>
+              <img  class="rounded-circle" src="<%= foundUser.profile.avatar %>" height="32" width="32">
             </div>
             <div class="p-2 align-self-center">
               Profile
