--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,7 +12,7 @@
       <div class="p-0 flex-fill profile-container">
         <a class="profile-bg profile-block"></a>
         <a title="" href="" class="">
-          <img  class="profile-avatarImg rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_400x400.jpg">
+          <img  class="profile-avatarImg rounded-circle" src="<%= foundUser.profile.avatar %>">
         </a>
 
         <div class="profile-divUser ">
