--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
               <label for="upload-preview" class="input-tweet-icon">
                 <i class="far fa-file-image"></i>
               </label>
-              <input type='file' id="upload-preview" name="img" />
+              <input type='file' id="upload-preview" name="img" accept='image/*' />
             </div>
             <div class="input-tweet-group">
               <button type="button" name="button" class="input-tweet-icon"><i class="fas fa-gift"></i></button>
