Fix broke img div

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -54,13 +54,13 @@
         <div class="d-flex ">
           <span class="tweet-content"><%= tweet.content %></span>
         </div>
+        <% if(tweet.img.data) {%>
         <div class="d-flex ">
-          <% if(tweet.img) {%>
           <span class="tweet-content tweet-content-img">
-            <img src="data:<%= tweet.img.contentType %>;base64,<%= tweet.img.data %>" />
+            <img src="data:<%= tweet.img.contentType %>;base64,<%= tweet.img.data %>" alt="" />
           </span>
-          <%}%>
         </div>
+        <% } %>
         <div class="d-flex ">
           <div class="p-2 flex-fill">
             <button type="button" name="button" class="flex-fill tweet-content-icon"><i class="far fa-comment"></i></button>
