Add edit profile function

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,11 +133,12 @@
       </form>
     </div>
   </div>
-  <script>
-    $(function() {
-      $('#year').combodate();
-      $('#day').combodate();
-      $('#month').combodate();
-    });
-  </script>
-  <%- include("footer.ejs") %>
+</div>
+<script>
+  $(function() {
+    $('#year').combodate();
+    $('#day').combodate();
+    $('#month').combodate();
+  });
+</script>
+<%- include("footer.ejs") %>
