--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -39,7 +39,23 @@
   height: 134px;
   width: 134px;
 }
-
+.profile-edit-btn {
+  color: #1DA1F2;
+  background-color: #fff;
+  border-color: #1DA1F2;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 30px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 1;
+  padding: 15px;
+  margin: 15px 15px 0 0;
+}
+.profile-edit-btn:hover {
+  background-color: #E8F5FE;
+}
 .profile-divUser {
   margin: 5px 0 0;
   padding: 10px;
@@ -64,7 +80,13 @@
 .profile-stat {
   margin-right: 20px;
 }
-
+.profile-edit-header {
+  padding: 10px 5px 10px 5px;
+}
+.profile-edit-header .close{
+  padding: 0;
+  margin: 0;
+}
 .tweet-nav {
 
 }
