--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,11 +10,15 @@
 
     <div class="d-flex flex-row">
       <div class="p-0 flex-fill profile-container">
-        <a class="profile-bg profile-block"></a>
-        <a title="" href="" class="">
-          <img  class="profile-avatarImg rounded-circle" src="<%= foundUser.profile.avatar %>">
-        </a>
-
+        <div class="">
+          <a class="profile-bg profile-block"></a>
+          <div class="d-flex">
+            <a title="" href="" class="">
+              <img class="profile-avatarImg rounded-circle" src="<%= foundUser.profile.avatar %>">
+            </a>
+            <button type="submit" name="button" class="profile-edit-btn ml-auto"data-toggle="modal" data-target="#modalLoginForm">Edit Profile</button>
+          </div>
+        </div>
         <div class="profile-divUser ">
           <div class="profile-divName">
             <span href=""><%= foundUser.profile.name  %></span>
@@ -49,25 +53,77 @@
       </div>
     </div>
     <div class="d-flex tweet-box">
-      <div class="p-2"><img  class="rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_bigger.jpg" height="49" width="49"></div>
+      <div class="p-2"><img class="rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_bigger.jpg" height="49" width="49"></div>
       <div class="p-2 flex-fill">Flex item</div>
     </div>
-    <script type="text/javascript">
-      // Get the container element
-      var btnContainer = document.getElementById("tweet-nav-container");
-      // Get all buttons with class="btn" inside the container
-      var btns = btnContainer.getElementsByClassName("btn");
-      // Loop through the buttons and add the active class to the current/clicked button
-      for (var i = 0; i < btns.length; i++) {
-        btns[i].addEventListener("click", function() {
-          var current = document.getElementsByClassName("tweet-nav-item-active");
-          current[0].className = current[0].className.replace(" tweet-nav-item-active", "");
-          this.className += " tweet-nav-item-active";
-        });
-      }
-    </script>
-
   </div>
+  <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <form id="signup" action="/editprofile" method="post">
+
+          <div class="modal-header edit-profile-header ">
+            <div class="">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="">
+              <h4 class="modal-title w-100 font-weight-bold">Edit profile</h4>
+            </div>
+            <div class="">
+              <button class="login-btn-signup" data-toggle="modal" data-target="#modalLoginForm" type="button" name="button" onclick="document.getElementById('signup').submit();">Save</button>
+            </div>
+          </div>
+          <div class="modal-body mx-5">
+            <div class="md-form mb-5">
+              <div class="signup-modal input-box">
+                <label for="">Name
+                  <input type="text" name="name" value="<%= foundUser.profile.name %>" data-lpignore="true" required>
+                </label>
+              </div>
+            </div>
+            <div class="md-form mb-5">
+              <div class="signup-modal input-box">
+                <label for="">Bio
+                  <input type="textarea" name="bio" value="<%= foundUser.profile.bio %>" data-lpignore="true" required>
+                </label>
+              </div>
+            </div>
+
+            <div class="md-form mb-5">
+              <div class="signup-modal input-box">
+                <label for="">Location
+                  <input type="text" name="location" value="<%= foundUser.profile.location %>" data-lpignore="true" required>
+                </label>
+              </div>
+            </div>
+            <div class="md-form mb-5">
+              <div class="signup-modal input-box">
+                <label for="">Website
+                  <input type="text" name="website" value="<%= foundUser.profile.website %>" data-lpignore="true" required>
+                </label>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <script type="text/javascript">
+    // Get the container element
+    var btnContainer = document.getElementById("tweet-nav-container");
+    // Get all buttons with class="btn" inside the container
+    var btns = btnContainer.getElementsByClassName("btn");
+    // Loop through the buttons and add the active class to the current/clicked button
+    for (var i = 0; i < btns.length; i++) {
+      btns[i].addEventListener("click", function() {
+        var current = document.getElementsByClassName("tweet-nav-item-active");
+        current[0].className = current[0].className.replace(" tweet-nav-item-active", "");
+        this.className += " tweet-nav-item-active";
+      });
+    }
+  </script>
   <%- include("sidebar.ejs") %>
 </div>
 <%- include("footer.ejs") %>
