--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,7 +14,7 @@
           <a class="profile-bg profile-block"></a>
           <div class="d-flex">
             <a title="" href="" class="">
-              <img class="profile-avatarImg rounded-circle" src="<%= foundUser.profile.avatar %>">
+              <img class="profile-avatarImg rounded-circle" src="data:<%= foundUser.profile.avatar.contentType %>;base64,<%= foundUser.profile.avatar.data %>" alt="" />
             </a>
             <button type="submit" name="button" class="profile-edit-btn ml-auto"data-toggle="modal" data-target="#modalLoginForm">Edit Profile</button>
           </div>
@@ -60,7 +60,7 @@
   <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
-        <form id="signup" action="/editprofile" method="post">
+        <form id="signup" action="/editprofile" method="post" enctype="multipart/form-data">
 
           <div class="modal-header edit-profile-header ">
             <div class="">
@@ -75,7 +75,17 @@
               <button class="login-btn-signup" data-toggle="modal" data-target="#modalLoginForm" type="button" name="button" onclick="document.getElementById('signup').submit();">Save</button>
             </div>
           </div>
+
+
           <div class="modal-body mx-5">
+            <div class="md-form mb-5">
+              <div class="signup-modal input-box">
+                <label for="upload-preview" class="input-tweet-icon">
+                  <i class="far fa-file-image">Upload a profile pic</i>
+                </label>
+                <input type='file' id="upload-preview" name="avatar" accept='image/*' />
+              </div>
+            </div>
             <div class="md-form mb-5">
               <div class="signup-modal input-box">
                 <label for="">Name
