--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
       <div class="d-flex flex-row twitter-tweet">
         <div class="p-2">
           <a href="/<%= foundUser.username %>">
-            <img class="rounded-circle" src="https://pbs.twimg.com/profile_images/777300939745013761/kGYRVUeo_bigger.jpg" height="49" width="49">
+            <img class="rounded-circle" src="data:<%= foundUser.profile.avatar.contentType %>;base64,<%= foundUser.profile.avatar.data %>" height="49" width="49">
           </a>
         </div>
         <div class="p-2 flex-fill">
@@ -45,7 +45,9 @@
     </div>
     <% foundTweet.forEach(function(tweet){ %>
     <div class="d-flex tweet-box">
-      <div class="p-2"><img class="rounded-circle" src="<%= foundUser.profile.avatar %>" height="49" width="49"></div>
+      <div class="p-2">
+        <img class="rounded-circle" src="data:<%= foundUser.profile.avatar.contentType %>;base64,<%= foundUser.profile.avatar.data %>" height="49" width="49">
+      </div>
       <div class="p-2 flex-fill">
         <div class="d-flex ">
           <span class="tweet-name"><%= tweet.name %></span>
